--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <p><a href="https://www.amazon.com/b/?_encoding=UTF8&node=23508887011&pd_rd_w=aIHm9&content-id=amzn1.sym.12129333-2117-4490-9c17-6d31baf0582a&pf_rd_p=12129333-2117-4490-9c17-6d31baf0582a&pf_rd_r=N78C7V9F410M8SAA9FP7&pd_rd_wg=KjyhT&pd_rd_r=e5276846-6bb1-4b20-884e-c5422de22aa6&ref_=pd_gw_unk">See more</a></p>
             </div>
         </div>
-        <<div class="box">
+        <div class="box">
             <div class="box-content">
                 <h2>New arrivals Clothes</h2>
                 <div class="box-img" style="background-image: url(box1_image.jpg);"></div>
